crates/daemon/tests/snapshots/cli_help__cli_help_open.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Open message in browser. Pass a positional ID or `--search QUERY` (with `--first` for the latest match, or `--limit N` plus `--yes` to open many tabs at once)

Usage: mxr open [OPTIONS] [MESSAGE_ID]

Arguments:
  [MESSAGE_ID]

Options:
      --search <SEARCH>
      --first
      --limit <LIMIT>
      --yes              Required when `--search` resolves to more than one match. Confirms you actually want N browser tabs
  -h, --help             Print help
