crates/daemon/tests/snapshots/cli_help__cli_help_reading_later.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
The Later shelf, or put items on it and take them off. Later never fades

Usage: mxr reading later [OPTIONS]

Options:
      --add <ITEM>         Items to put on Later
      --remove <ITEM>      Items to take off Later
      --dry-run
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
